# python-zaqarclient

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .zuul.yaml  HACKING.rst  README.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: README.md  requirements.txt
doc/source/: client.rst  command-line.rst  conf.py  index.rst
doc/source/command/: claim.rst  flavor.rst  health.rst  message.rst  ping.rst  pool.rst  queue.rst  subscription.rst
examples/: claims.py  keystone_auth.py  keystone_session_auth.py  management.py  signed_url_auth.py  simple.py
marconiclient/: __init__.py  errors.py  version.py
marconiclient/auth/: __init__.py  base.py  keystone.py
marconiclient/common/: cliutils.py  http.py  utils.py
marconiclient/common/apiclient/: base.py  client.py  exceptions.py  fake_client.py
marconiclient/common/apiclient/auth/: base.py  endpoint.py  keystone.py  nova.py  response.py
marconiclient/openstack/common/: gettextutils.py  strutils.py
marconiclient/queues/: cli.py  client.py
marconiclient/queues/v1/: api.py  claim.py  client.py  core.py  iterator.py  message.py  queues.py  shard.py
marconiclient/tests/: base.py
marconiclient/tests/mock/: message.py
marconiclient/tests/queues/: base.py  claims.py  messages.py  queues.py  shard.py
marconiclient/tests/transport/: api.py  dummy.py
marconiclient/transport/: __init__.py  api.py  base.py  errors.py  http.py  request.py  response.py
marconiclient/transport/http/: message.py
playbooks/zaqarclient-dsvm-functional/: run.yaml
releasenotes/notes/: add-validation-for-queue-name-6e417870cc257308.yaml  consistent-command-format-82df852b384bd284.yaml  drop-py-2-7-20019a123a9d5e8f.yaml  keystoneclient-to-keystoneauth-85c5f098bd023030.yaml  remove-identity-v2-c1071b9bccf2f9ab.yaml  remove-v1-api-support-c0d2f4e130aa787a.yaml  remove_os_prefix-14fc4a97527dee81.yaml  support-SSL-and-insecure-9b2bbec12b76bf7f.yaml  support-detailed-queue-list-0335b3ebde115bfd.yaml  support-doc-f12538ac5f35a282.yaml  support-osprofiler-41af30da3bee5ed0.yaml  support-post-list-messages-cc224643840a1242.yaml  support-session-c3f81233e03dacc8.yaml
releasenotes/source/: conf.py  index.rst
tests/: __init__.py  utils.py
tests/auth/: test_base.py  test_keystone.py
tests/common/: test_cliutils.py
tests/common/apiclient/: test_base.py  test_client.py  test_exceptions.py
tests/common/apiclient/auth/: test_base.py  test_keystone.py  test_nova.py  test_response.py
tests/functional/queues/v1/: test_claims.py  test_flavor.py  test_pool.py  test_queues.py  test_shard.py
tests/functional/queues/v2/: test_claims.py  test_flavor.py  test_health.py  test_pool.py  test_queues.py  test_subscription.py
tests/unit/auth/: test_base.py  test_keystone.py
tests/unit/cli/: fakes.py
tests/unit/cli/v1/: test_queues.py
tests/unit/common/: test_http.py
tests/unit/queues/: test_client.py
tests/unit/queues/v1/: test_claims.py  test_client.py  test_core.py  test_flavor.py  test_message.py  test_pool.py  test_queues.py  test_shard.py
tests/unit/queues/v2/: test_claims.py  test_client.py  test_core.py  test_flavor.py  test_health.py  test_message.py  test_pool.py  test_queues.py  test_subscription.py
tests/unit/transport/: test_api.py  test_http.py  test_request.py  test_ws.py
tests/unit/transport/http/: test_message.py
tools/: test-requires
zaqarclient/: __init__.py  _i18n.py  errors.py  version.py
zaqarclient/auth/: __init__.py  base.py  keystone.py  signed_url.py
zaqarclient/common/: decorators.py  http.py
zaqarclient/queues/: cli.py  client.py
zaqarclient/queues/v1/: api.py  claim.py  cli.py  client.py  core.py  flavor.py  iterator.py  message.py  pool.py  queues.py  shard.py
zaqarclient/queues/v2/: api.py  claim.py  cli.py  client.py  core.py  flavor.py  iterator.py  message.py  pool.py  queues.py  subscription.py
zaqarclient/tests/: base.py
zaqarclient/tests/mock/: message.py
zaqarclient/tests/queues/: base.py  claims.py  flavor.py  health.py  messages.py  pool.py  queues.py  shard.py  subscriptions.py
zaqarclient/tests/queues/v2/: messages.py  queues.py
zaqarclient/tests/transport/: api.py  dummy.py
zaqarclient/transport/: __init__.py  api.py  base.py  errors.py  http.py  request.py  response.py  ws.py
