[metadata]
name = python-zaqarclient
summary = Client Library for OpenStack Zaqar Messaging API
description-file =
    README.rst
author = OpenStack Foundation
author-email = openstack-admins@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: Implementation :: PyPy

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    zaqarclient

[entry_points]
zaqarclient.transport =
    http.v1 = zaqarclient.transport.http:HttpTransport
    https.v1 = zaqarclient.transport.http:HttpTransport

    http.v1.1 = zaqarclient.transport.http:HttpTransport
    https.v1.1 = zaqarclient.transport.http:HttpTransport

    http.v2 = zaqarclient.transport.http:HttpTransport
    https.v2 = zaqarclient.transport.http:HttpTransport

zaqarclient.api =
    queues.v1 = zaqarclient.queues.v1.api:V1
    queues.v1.1 = zaqarclient.queues.v1.api:V1_1
    queues.v2 = zaqarclient.queues.v2.api:V2

openstack.messaging.v1 =
    queue_list = zaqarclient.queues.v1.cli:ListQueues
    queue_create = zaqarclient.queues.v1.cli:CreateQueue
    queue_delete = zaqarclient.queues.v1.cli:DeleteQueue
    queue_exists = zaqarclient.queues.v1.cli:CheckQueueExistence
    queue_set_metadata = zaqarclient.queues.v1.cli:SetQueueMetadata
    queue_get_metadata = zaqarclient.queues.v1.cli:GetQueueMetadata
    queue_stats = zaqarclient.queues.v1.cli:GetQueueStats
    pool_create = zaqarclient.queues.v1.cli:CreatePool
    pool_show = zaqarclient.queues.v1.cli:ShowPool
    pool_update = zaqarclient.queues.v1.cli:UpdatePool
    pool_delete = zaqarclient.queues.v1.cli:DeletePool
    pool_list = zaqarclient.queues.v1.cli:ListPools
    messaging_flavor_list = zaqarclient.queues.v1.cli:ListFlavors
    messaging_flavor_delete = zaqarclient.queues.v1.cli:DeleteFlavor
    messaging_flavor_update = zaqarclient.queues.v1.cli:UpdateFlavor
    messaging_flavor_show = zaqarclient.queues.v1.cli:ShowFlavor
    messaging_flavor_create = zaqarclient.queues.v1.cli:CreateFlavor
    claim_create = zaqarclient.queues.v1.cli:CreateClaim
    claim_query = zaqarclient.queues.v1.cli:QueryClaim
    claim_renew = zaqarclient.queues.v1.cli:RenewClaim
    claim_release = zaqarclient.queues.v1.cli:ReleaseClaim

openstack.messaging.v2 =
    queue_list = zaqarclient.queues.v2.cli:ListQueues
    queue_create = zaqarclient.queues.v2.cli:CreateQueue
    queue_delete = zaqarclient.queues.v2.cli:DeleteQueue
    queue_stats = zaqarclient.queues.v2.cli:GetQueueStats
    pool_create = zaqarclient.queues.v2.cli:CreatePool
    pool_show = zaqarclient.queues.v2.cli:ShowPool
    pool_update = zaqarclient.queues.v2.cli:UpdatePool
    pool_delete = zaqarclient.queues.v2.cli:DeletePool
    pool_list = zaqarclient.queues.v2.cli:ListPools
    messaging_flavor_list = zaqarclient.queues.v2.cli:ListFlavors
    messaging_flavor_delete = zaqarclient.queues.v2.cli:DeleteFlavor
    messaging_flavor_update = zaqarclient.queues.v2.cli:UpdateFlavor
    messaging_flavor_show = zaqarclient.queues.v2.cli:ShowFlavor
    messaging_flavor_create = zaqarclient.queues.v2.cli:CreateFlavor
    claim_create = zaqarclient.queues.v2.cli:CreateClaim
    claim_query = zaqarclient.queues.v2.cli:QueryClaim
    claim_renew = zaqarclient.queues.v2.cli:RenewClaim
    claim_release = zaqarclient.queues.v2.cli:ReleaseClaim
    subscription_create = zaqarclient.queues.v2.cli:CreateSubscription
    subscription_update = zaqarclient.queues.v2.cli:UpdateSubscription
    subscription_delete = zaqarclient.queues.v2.cli:DeleteSubscription
    subscription_show = zaqarclient.queues.v2.cli:ShowSubscription
    subscription_list = zaqarclient.queues.v2.cli:ListSubscriptions
    queue_signed_url = zaqarclient.queues.v2.cli:CreateSignedUrl

openstack.cli.extension =
    messaging = zaqarclient.queues.cli

[nosetests]
where=tests
verbosity=2

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
