[metadata]
name = python-zaqarclient
summary = Client Library for OpenStack Zaqar Messaging API
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/python-zaqarclient/latest/
python_requires = >=3.9
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    zaqarclient

[entry_points]
zaqarclient.transport =
    http.v1 = zaqarclient.transport.http:HttpTransport
    https.v1 = zaqarclient.transport.http:HttpTransport

    http.v1.1 = zaqarclient.transport.http:HttpTransport
    https.v1.1 = zaqarclient.transport.http:HttpTransport

    http.v2 = zaqarclient.transport.http:HttpTransport
    https.v2 = zaqarclient.transport.http:HttpTransport

    ws.v1 = zaqarclient.transport.ws:WebsocketTransport
    ws.v1.1 = zaqarclient.transport.ws:WebsocketTransport
    ws.v2 = zaqarclient.transport.ws:WebsocketTransport

zaqarclient.api =
    queues.v1 = zaqarclient.queues.v1.api:V1
    queues.v1.1 = zaqarclient.queues.v1.api:V1_1
    queues.v2 = zaqarclient.queues.v2.api:V2

openstack.messaging.v2 =
    messaging_queue_list = zaqarclient.queues.v2.cli:ListQueues
    messaging_queue_create = zaqarclient.queues.v2.cli:CreateQueue
    messaging_queue_delete = zaqarclient.queues.v2.cli:DeleteQueue
    messaging_queue_stats = zaqarclient.queues.v2.cli:GetQueueStats
    messaging_queue_set_metadata = zaqarclient.queues.v2.cli:SetQueueMetadata
    messaging_queue_get_metadata = zaqarclient.queues.v2.cli:GetQueueMetadata
    messaging_queue_purge = zaqarclient.queues.v2.cli:PurgeQueue
    messaging_pool_create = zaqarclient.queues.v2.cli:CreatePool
    messaging_pool_show = zaqarclient.queues.v2.cli:ShowPool
    messaging_pool_update = zaqarclient.queues.v2.cli:UpdatePool
    messaging_pool_delete = zaqarclient.queues.v2.cli:DeletePool
    messaging_pool_list = zaqarclient.queues.v2.cli:ListPools

    messaging_flavor_list = zaqarclient.queues.v2.cli:ListFlavors
    messaging_flavor_delete = zaqarclient.queues.v2.cli:DeleteFlavor
    messaging_flavor_update = zaqarclient.queues.v2.cli:UpdateFlavor
    messaging_flavor_show = zaqarclient.queues.v2.cli:ShowFlavor
    messaging_flavor_create = zaqarclient.queues.v2.cli:CreateFlavor

    messaging_claim_create = zaqarclient.queues.v2.cli:CreateClaim
    messaging_claim_query = zaqarclient.queues.v2.cli:QueryClaim
    messaging_claim_renew = zaqarclient.queues.v2.cli:RenewClaim
    messaging_claim_release = zaqarclient.queues.v2.cli:ReleaseClaim
    messaging_subscription_create = zaqarclient.queues.v2.cli:CreateSubscription
    messaging_subscription_update = zaqarclient.queues.v2.cli:UpdateSubscription
    messaging_subscription_delete = zaqarclient.queues.v2.cli:DeleteSubscription
    messaging_subscription_show = zaqarclient.queues.v2.cli:ShowSubscription
    messaging_subscription_list = zaqarclient.queues.v2.cli:ListSubscriptions
    messaging_queue_signed_url = zaqarclient.queues.v2.cli:CreateSignedUrl

    messaging_ping = zaqarclient.queues.v2.cli:Ping
    messaging_health = zaqarclient.queues.v2.cli:Health
    messaging_homedoc = zaqarclient.queues.v2.cli:HomeDoc

    messaging_message_post = zaqarclient.queues.v2.cli:PostMessages
    messaging_message_list = zaqarclient.queues.v2.cli:ListMessages

openstack.cli.extension =
    messaging = zaqarclient.queues.cli
